--- a/css/section.css
+++ b/css/section.css
@@ -2,17 +2,28 @@
   padding: 15px;
 }
 
-.section--h1 {
+.section__h1 {
+  font-size: 22px;
   text-align: center;
+  color: hsl(60, 100%, 50%);
 }
 
-.section--paragraph {
+.section__paragraph {
   font-size: 20px;
   padding: 5px;
 }
 
-.section--bold{
+.section--bold {
   font-weight: bold;
+}
+
+.section__button--underscore {
+  color: hsl(0, 0%, 0%);
+  background-color: hsl(0, 0%, 100%);
+  border-style: none;
+  font-size: 14px;
+  padding: 8px;
+  margin: 5px;
 }
 
 .section__button {
@@ -31,4 +42,24 @@
 .section__button--link {
   color: hsl(0, 0%, 0%);
   text-decoration: none;
+}
+
+.section__video--paragraph {
+  width: 100%;
+  text-align: center;
+}
+
+.iframe__container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0;
+}
+
+.iframe__container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
